hw9/src/test/resources/invalid/brackets_mismatched.L
write (((((expression) * (123.4))))))